# surah-splitter

./: .dockerignore  .gitignore  Dockerfile  Makefile  NEW_FEATURES.md  README.md  Sample-1-Alfatiha.m4a  Sample-2.m4a  build.sh  docker-compose.yml  pyproject.toml  run_demo.sh  start_api_server.sh  test_api.sh
.claude/: settings.local.json
src/surah_splitter/api/: API_DOCUMENTATION.md  main.py  requirements.txt  test_client.py
src/surah_splitter/app/: azure_cli.py  realtime_cli.py
src/surah_splitter/models/: __init__.py  gpt_audio_models.py
src/surah_splitter/services/: __init__.py  azure_gpt_audio_service.py  azure_transcription_service.py  hybrid_transcription_service.py  personalized_learning.py  progress_tracker.py  prompt_templates.py  quran_word_tracker.py  realtime_transcription_service.py  realtime_transcription_service_broken.py  streaming_stt_service.py  tajweed_analyzer.py  transcription_service.py
src/surah_splitter/utils/: arabic_similarity.py  audio_encoding.py  audio_processing.py  config_manager.py
src/surah_splitter/web/: realtime_app.py
static/: style.css
templates/: api_demo.html  realtime_feedback.html
tests/: test_azure_gpt_audio_service.py
